Archive2/ed/3179e8670ccf90/output
main.cpp:1:10: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
 char str=R"xxx(
          ^
