Archive2/ed/3179e8670ccf90/main.cpp
char str=R"xxx(
I can put whatever I want here,
even if it spans multiple lines.
)xxx";